fixed z-index of tabs

--- a/scss/adaptive/_tab.scss
+++ b/scss/adaptive/_tab.scss
@@ -208,7 +208,7 @@
     }
     .tab {
         &:first-child {
-            z-index: 2;
+            z-index: 12;
         }
         &:last-child {
             margin-top: 10px;
